--- a/static/login/resetpass.css
+++ b/static/login/resetpass.css
@@ -319,6 +319,7 @@ label{
 }
 
 .back-button{
+    width: 100%;
     box-sizing: border-box;
     padding: 10px;
     width: 235px;
@@ -329,15 +330,18 @@ label{
     border: 4px solid rgb(171, 177, 177);
     border-radius: 21px;
     cursor: pointer;
+    text-align: center;
+    text-decoration: none;
 }
 
-.submit-button:hover{
+.submit-button:hover, .frconfirm_submit:hover{
     background-color: rgb(199, 89, 15);
 }
 
 .back-button:hover{
     background-color: rgb(171, 177, 177);
     color: rgb(255, 255, 255);
+    text-decoration: none;
 }
 
 
