--- a/templates/forget_password/password_reset_confirm.html
+++ b/templates/forget_password/password_reset_confirm.html
@@ -39,34 +39,25 @@
 
         <div class="login-form-container" style="height: 400px; ">
 
-				<form method="POST">
+				
 					<div class="title-container">
                         <img src="{% static 'login/unlocked.png' %}" class="ccs-logo" style="width: 100px;">
                         <h1 class="title">Create New Password</h1>
 					</div>
 
+                <form method="POST">
 						{% csrf_token %}   
+                    {% for field in form %}
+                        <div class="new-pass">
+                            {{ field.label_tag }}<span style="color: rgba(234, 231, 231, 0)">
+                            <input class="password" type="password" {{ field }}>
+                        </div></span>
+                    {% endfor %}
 
-                        {% for field in form %}
-                            {{ field }}
-                        {% endfor %}
-                        <button type="submit">Reset Password</button>
-                    <!-- Additional labels for password fields -->
-                    <!-- <div class="frtext">
-                        <div>
-                            <h1 class="new-pass">New Password:</h1>
-                            <input class="form-field" type="password" name="new_password">
-                        </div>
-                        <div>
-                            <h1 class="new-pass">Confirm new password:</h1>
-                            <input class="form-field" type="password" name="confirm_password">
-                        </div>
-                    </div> -->
-                    <!-- Submit button -->
-                    <!-- <div class="buttons">			  
+                   <div class="buttons">			  
                         <button class="frconfirm_submit" type="submit">Save Your Password</button>
                     </div>
-             -->
+            
                 </form>
 		</div>
            
