--- a/templates/notification/notification.html
+++ b/templates/notification/notification.html
@@ -2,51 +2,56 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <title>Notifications</title>
+   <title>Faculty Notification</title>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link href="https://fonts.googleapis.com/css?family=Orienta:regular" rel="stylesheet" />
    <link rel="stylesheet" href="{% static '/notification/notificationstyle.css' %}">
 </head>
 <body>
     <header>
-        <div class="header">
-          <div class="logo-left">
-           <img src="media\logo\lspu-logo.png" alt="LSPU Logo">
-          </div>
-          
-          <div class="search">
-            <form method="GET" action="{% url 'search_items' %}">
-              <input type="text" name="q" value="{{ query }}" placeholder="Search for name/id/category" style="width: 950px;height: 30px;left: 187px;border-radius: 10px;border: 4px;margin-top: 15px;">
-              <button type="submit" style="margin-left: 960px;">Search</button>
-            </form>
+            <div class="logo left">
+               <img src="/static/home/adminhome/LSPU.png" alt="Left Logo">
          </div>
-  
-           <div class="logo-right">
-              <img src="media\logo\ccs-logo.png" alt="CSS Logo">
-           </div>
-          
-        </div>
+
+         <div class="middle-section">
+               <form method="GET" action="{% url 'search_items' %}" class="search-form">
+                  <input class="search-bar" type="text" name="q" value="{{ query }}" placeholder="Search for name/id/category">
+                  <input class="search-button" type="submit" value="Search" name="b">
+               </form>
+         </div>
+
+         <div class="logo right">
+               <img src="/static/home/adminhome/CSS.png" alt="Right Logo">
+         </div> 
       </header>
       <div class="head"></div>
       <div class="head"></div>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-   <div class="container">
-      <a href="{% url 'home' %}" class="navbar-brand">Home</a>
-      <a href="{% url 'recents' %}" class="navbar-brand">Recents</a>
-      <a href="{% url 'unreturned' %}" class="navbar-brand">Unreturned</a>
-      <a href="{% url 'notification' %}" class="navbar-brand">Notifications</a>
-      {% if unreturned_item_exist %}
-      <span class="notification-indicator">!</span>
-      {% endif %}
-      <a href="{% url 'userprofile' %}" class="navbar-brand">Account</a>
-      <a href="{% url 'logout' %}" class="navbar-brand">Logout</a>
-   </div>
-</nav>
-{% include 'home/result_list.html' %}
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+         <div class="container">
+               <a href="{% url 'home' %}" class="navbar-brand">Home</a>
+               <a href="{% url 'recents' %}" class="navbar-brand">Recents</a>
+               <a href="{% url 'unreturned' %}" class="navbar-brand">Unreturned</a>
+               <a href="{% url 'notification' %}" class="navbar-brand">Notification</a>
+               {% if unreturned_item_exist %}
+               <span class="notification-indicator">!</span>
+               {% endif %}
+
+               <a href="{% url 'userprofile' %}" class="navbar-brand">Account</a>
+               <a href="{% url 'logout' %}" class="navbar-brand">Logout</a>
+         </div>
+     </nav>
+     {% include 'home/result_list.html' %}
 <div id="main" class="form">
-
-   <ul>
-
+   <div id="wrapper">
+      <div id="notice">
+         {% if unreturned_item_exist %}
+         <p>You have unreturned items. Please check the Unreturned Items tab for more details.<br>Please return the items after each use. Thanks!</p>
+      </div>
+   
+       
+       {% else %}
+       <p>No unreturned items at the moment.</p>
+       {% endif %}
       {% for item_info in unreturned_items %}
       <li>
           Item ID: {{ item_info.item_name }} - 
@@ -55,18 +60,8 @@
           
       </li>
       {% endfor %}
-  </ul>
+   </div>
 
-         <div>
-            {% if unreturned_item_exist %}
-            <p>You have unreturned items. Please check the Unreturned Items tab for more details.</p>
-         </div>
-
-    <p>Please return the items after each use. Thanks!</p>
-    {% else %}
-    
-    <p>No unreturned items at the moment.</p>
-    {% endif %}
   </div>
 </div>
   
