--- a/templates/recents/recents.html
+++ b/templates/recents/recents.html
@@ -2,39 +2,50 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="{% static 'recents/recentstyle.css' %}" />
-        <title>RECENTS</title>
+        <link rel="stylesheet" href="{% static 'recents/recentstyle.css' %}">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+        <title>Faculty Recents</title>
     </head>
-
-    
-
     <body>
-        <h1 id="mema_title">Page ng RECENTS to boy. HAHA</h1>
-
-        <form method="GET" action="{% url 'search_items' %}">
-            <input type="text" name="q" value="{{ query }}" placeholder="Search for name/id/category">
-            <button type="submit">Search</button>
-          </form>
-
-        <div id="nav_btn" class="rounded_corners">
-            <button><a href="{% url 'home' %}">Home</a></button>
-            <button><a href="{% url 'recents' %}" class="active_tab">Recents</a></button>
-            <button><a href="{% url 'unreturned' %}">Unreturned</a></button>
-            <button><a href="{% url 'notification' %}">Notification</a></button>
-            <button><a href="{% url 'userprofile' %}">Account</a></button>
-            <button><a href="{% url 'logout' %}">Logout</a></button>
+        
+        <header>
+        <div class="logo left">
+            <img src="/static/home/adminhome/LSPU.png" alt="Left Logo">
         </div>
 
+        <div class="middle-section">
+            <form method="GET" action="{% url 'search_items' %}" class="search-form">
+                <input class="search-bar" type="text" name="q" value="{{ query }}" placeholder="Search for name/id/category">
+                <input class="search-button" type="submit" value="Search" name="b">
+            </form>
+        </div>
+
+        <div class="logo right">
+            <img src="/static/home/adminhome/CSS.png" alt="Right Logo">
+        </div> 
+    </header>
+    <div class="head"></div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+                <a href="{% url 'home' %}" class="navbar-brand">Home</a>
+                <a href="{% url 'recents' %}" class="navbar-brand">Recents</a>
+                <a href="{% url 'unreturned' %}" class="navbar-brand">Unreturned</a>
+                <a href="{% url 'notification' %}" class="navbar-brand">Notification</a>
+                <a href="{% url 'userprofile' %}" class="navbar-brand">Account</a>
+                <a href="{% url 'logout' %}" class="navbar-brand">Logout</a>
+        </div>
+    </nav>
+        </div> 
+        <div id="mainForm" class="form">
         <div id="container" class="rounded_corners">
 
-            <!-- test block code -->
-            <!-- template for the items -->
+
             {% for items in borrowed_item reversed %}
             <div id="wrapper">
                 <div id="top">
                     <div id="left">
                         {% if items.item_stock.item_information.item_photo %}
-                            <img src="{{ items.item_stock.item_information.item_photo.url }}" alt="" class="inventory_item"  height="100%" object-fit="contain">
+                            <img src="{{ items.item_stock.item_information.item_photo.url }}" alt="" class="inventory_item"  height="100%" object-fit="scale-down">
                         {% endif %}
 
                     </div>
@@ -46,22 +57,20 @@
                             Borrower: {{items.item_borrower}}
                         </p>
                         <p id="item_quantity">Item Quantity: {{items.item_quantity}}</p>
+                      
 
                     </div>
                 </div>
                 <div id="bottom">
-                    <div id="btn_con">
-                        <!-- <button id="return_btn" class="rounded_corners">Return</button> -->
-                    </div>
-                </div>
 
+                </div>
+                <div class="recent-lines"></div>
             </div>
             {% endfor %}
-            <!-- template for the items -->
+
 
         </div>
-        
+        </div>
+        {% include 'home/result_list.html' %}
     </body>
 </html>
-
-{% include 'home/result_list.html' %}
