--- a/templates/unreturned/unreturned.html
+++ b/templates/unreturned/unreturned.html
@@ -2,59 +2,52 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="{% static 'unreturned/unreturnedstyle.css' %}" />
-        <title>UNRETURNED</title>
+        <link rel="stylesheet" href="{% static 'unreturned/unreturnedstyle.css' %}">
+        <title>Faculty Unreturned</title>
     </head>
-
     <body>
         <header>
-            <div class="header">
-              <div class="logo-left">
-               <img src="media\logo\lspu-logo.png" alt="LSPU Logo">
-              </div>
-              
-              <div class="search">
-                <form method="GET" action="{% url 'search_items' %}">
-                  <input type="text" name="q" value="{{ query }}" placeholder="Search for name/id/category" style="width: 950px;height: 30px;left: 187px;border-radius: 10px;border: 4px;margin-top: 15px;">
-                  <button type="submit" style="margin-left: 960px;">Search</button>
+            <div class="logo left">
+                <img src="static/unreturned/unreturnedadmin/LSPU.png" alt="Left Logo">
+            </div>
+            <div class="middle-section">
+                <form method="GET" action="{% url 'search_items' %}" class="search-form">
+                    <input class="search-bar" type="text" name="q" value="{{ query }}" placeholder="Search for name/id/category">
+                    <input class="search-button" type="submit" value="Search" name="b">
                 </form>
-             </div>
-      
-               <div class="logo-right">
-                  <img src="media\logo\ccs-logo.png" alt="CSS Logo">
-               </div>
-              
             </div>
-          </header>
-          <div class="head"></div>
-
-          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="logo right">
+                <img src="static/unreturned/unreturnedadmin/CSS.png" alt="Right Logo">
+            </div> 
+        </header>
+        <div class="head"></div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
-               <a href="{% url 'home' %}" class="navbar-brand">Home</a>
-               <a href="{% url 'recents' %}" class="navbar-brand">Recents</a>
-               <a href="{% url 'unreturned' %}" class="navbar-brand">Unreturned</a>
-               <a href="{% url 'notification' %}" class="navbar-brand">Notifications</a>
-               <a href="{% url 'userprofile' %}" class="navbar-brand">Account</a>
-               <a href="{% url 'logout' %}" class="navbar-brand">Logout</a>
+                <a href="{% url 'home' %}" class="navbar-brand">Home</a>
+                    <a href="{% url 'recents' %}" class="navbar-brand">Recents</a>
+                    <a href="{% url 'unreturned' %}" class="navbar-brand">Unreturned</a>
+                    <a href="{% url 'notification' %}" class="navbar-brand">Notification</a>
+                    <a href="{% url 'userprofile' %}" class="navbar-brand">Account</a>
+                    <a href="{% url 'logout' %}" class="navbar-brand">Logout</a>
             </div>
-         </nav>
-
-        {% include 'home/result_list.html' %}
+        </nav>
+        </div>
+        
+        <div id="mainForm" class="form">
         <div id="container" class="rounded_corners">
 
             <!-- test block code -->
             <!-- template for the items -->
             {% for item in unreturned_items reversed %}
-            <div id="wrapper" class="group">
+            <div id="wrapper">
 
                 <div id="top">
                     <div id="left">
                         {% if item.item_borrowed.item_stock.item_information.item_photo %}
-                            <img src="{{ item.item_borrowed.item_stock.item_information.item_photo.url }}" alt="" class="inventory_item">
+                            <img src="{{ item.item_borrowed.item_stock.item_information.item_photo.url }}" class="inventory_item">
                         {% endif %}
 
                     </div>
-                    <div id="main" class="disc">
                     <div id="right">
                         <p id="item_name">{{ item.item_borrowed.item_stock.item_information.item_name }}</p>
                         <p id="item_details">
@@ -62,23 +55,25 @@
                             Time Returned: {{ item.item_borrowed.item_date_returned }}<br />
                             Borrower: {{ item.item_borrowed.item_borrower }}
                         </p>
-                        <div class="quan">
-                            <p id="item_quantity">Item Quantity: {{ item.item_borrowed.item_quantity }}</p>
-                        </div>
+                        <p id="item_quantity">Item Quantity: {{ item.item_borrowed.item_quantity }}</p>
+
                     </div>
                 </div>
                 <div id="bottom">
-                    <div id="btn_con" class="btn">
-                        <!-- <button id="return_btn" class="rounded_corners">Return</button> -->
-                        <a href="{% url 'return_item' item.id item.item_borrowed.item_stock.id %}">Return</a>
-                    </div>
+                    
                 </div>
+                <div class="recent-lines">
+                    <div id="btn_con">
+                        <button id="return_btn" class="rounded_corners">
+                        <a href="{% url 'return_item' item.id item.item_borrowed.item_stock.id %}">Return</a></button>
+                    </div>
                 </div>
             </div>
             {% endfor %}
             <!-- template for the items -->
+        {% include 'home/result_list.html' %}
 
-        </div>
-
+    </div>
+</div>
     </body>
 </html>
