--- a/templates/userprofile/admin_userprofile.html
+++ b/templates/userprofile/admin_userprofile.html
@@ -43,7 +43,7 @@
                 <p class="text-secondary">Email: {{ user_profile.user.email }}</p>
                 <p class="text-secondary">Contact Number: {{ user_profile.contact_number }}</p>
 
-                <button class="btn" style="margin-top: 20px;"><a href="{% url 'editprofile' %}">Edit Profile</a></button>
+                <button class="btn" style="margin-top: 20px;"><a href="{% url 'editprofileadmin' %}">Edit Profile</a></button>
             </div>
         </div>
 
