--- a/templates/userprofile/editprofileadmin.html
+++ b/templates/userprofile/editprofileadmin.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="{% static 'userprofile/userprofile.css' %}">
+        <link rel="stylesheet" href="{% static 'userprofile/userprofileadminstyle.css' %}">
         <title>EDIT USER PROFILE</title>
     </head>
 <body>
@@ -12,7 +12,7 @@
             <img src="static/unreturned/unreturnedadmin/LSPU.png" alt="Left Logo">
         </div>
         <div class="middle-section">
-            <form method="GET" action="{% url 'search_items' %}" class="search-form">
+            <form method="GET" action="{% url 'search_items_admin' %}" class="search-form">
                 <input class="search-bar" type="text" name="q" value="{{ query }}" placeholder="Search for name/id/category">
                 <input class="search-button" type="submit" value="Search" name="b">
             </form>
@@ -24,11 +24,11 @@
     <div class="head"></div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a href="{% url 'home' %}" class="navbar-brand">Home</a>
-            <a href="{% url 'recents' %}" class="navbar-brand">Recents</a>
-            <a href="{% url 'unreturned' %}" class="navbar-brand">Unreturned</a>
-            <a href="{% url 'notification' %}" class="navbar-brand">Notification</a>
-            <a href="{% url 'userprofile' %}" class="navbar-brand">Account</a>
+            <a href="{% url 'admin_home' %}" class="navbar-brand">Home</a>
+            <a href="{% url 'admin_recents' %}" class="navbar-brand">Recents</a>
+            <a href="{% url 'admin_unreturned' %}" class="navbar-brand">Unreturned</a>
+            <a href="{% url 'members' %}" class="navbar-brand">Members</a>
+            <a href="{% url 'admin_userprofile' %}" class="navbar-brand">Account</a>
             <a href="{% url 'logout' %}" class="navbar-brand">Logout</a>
         </div>
     </nav>
