--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -8,62 +8,96 @@
     </head>
     <h1>FACULTY HOME</h1>
     <body>
-        {% if user.is_authenticated %}
+        <!-- {% if user.is_authenticated %}
             <h1>>Welcome, {{ user.username }}</h1>
-        {% endif %}
+        {% endif %} -->
 
-        <form method="GET" action="{% url 'search_items' %}">
-            <input type="text" name="q" value="{{ query }}" placeholder="Search for name/id/category">
-            <button type="submit">Search</button>
-          </form>
+       
+        <div class="header">
+            
+            <div class="left-section">
+                <img class="lspu-logo" src="{% static 'home/logo/lspu-logo.png' %}">
+            </div>
+
+            <div class="middle-section">
+                <form method="GET" action="{% url 'search_items' %}">
+                    <input class="search-bar" type="text" placeholder="Search for name/id/category" name="q" value="{{ query }}">
+                    <input class="search-button" type="submit" value="Search">
+                </form>
+            </div>
+
+            <div class="right-section">
+                <img class="ccs-logo" src="{% static 'home/logo/ccs-logo.jpg' %}">
+            </div>
+            
+        </div>
+                {% include 'home/result_list.html' %}
+        <div class="buttons-box">
+            <div class="button-grid">
+                <button class="buttons-tabs"><a href="{% url 'home' %}">Home</a></button>
+                <button class="buttons-tabs"><a href="{% url 'recents' %}">Recents</a></button>
+                <button class="buttons-tabs"><a href="{% url 'unreturned' %}">Unreturned</a></button>
+                <button class="buttons-tabs"><a href="{% url 'notification' %}">Notification</a></button>
+                <button class="buttons-tabs"><a href="{% url 'userprofile' %}">Account</a></button>
+                <button class="buttons-tabs"><a href="{% url 'logout' %}">Logout</a></button>
+            </div>  
+        </div> 
+
         
-        <button><a href="{% url 'home' %}">Home</a></button>
-        <button><a href="{% url 'recents' %}">Recents</a></button>
-        <button><a href="{% url 'unreturned' %}">Unreturned</a></button>
-        <button><a href="{% url 'notification' %}">Notification</a></button>
-        <button><a href="{% url 'userprofile' %}">Account</a></button>
-        <button><a href="{% url 'logout' %}">Logout</a></button>
-
+        <div class="category-container">
+            <div class="category-title-button">
+                <p class="category-container-title">
+                    Categories 
+                </p>  
+                
+                <div id="back-button">
+                
+                </div>
+            </div>
+            <!-- category-grid -->
+            <div class="categories">
 
                 {% for category in categories %}
                 <!-- CATEGORY-PREVIEW -->
-                <button onclick="showItem('{{ category }}')">{{ category }}</button>
+                <button onclick="showItem('{{ category }}')" class="category_button">
+                {{ category }}
+                </button>
                 {% endfor %}
-
-
-        <div id="back-button">
+            </div>
             
-        </div>
 
-        <div id="category_item" class="category_div">
-            <div id="item_list">
+            <div id="category_item" class="category_div">
+                <div id="item_list" class="items_div">
 
+
+                </div>
+                <h1>{{ current_category }}</h1>
+                {% for item in cleaning_inventory %}
+                    <div class="item">
+                        
+                    </div>
+                {% endfor %}
+                {% include 'home/result_list.html' %}
+                <div class="item_information" id="item_information">
+                    
+                    <div class="item_header" id="item_header">
+                       
+                    </div>
+
+                    <div class="borrow-form">
+                        <div class="item_body" id="item_body">
+                            <button data-close-button class="close_button">&times;</button>      
+
+                        </div>
+                        <div class="item_form" id="item_form">
+
+                        </div>
+                    </div>
+                </div>
+                
             </div>
-            <h1>{{ current_category }}</h1>
-            {% for item in cleaning_inventory %}
-                <div>
-
-                </div>
-            {% endfor %}
-            <div class="item_information" id="item_information">
-                <div class="item_header" id="item_header">
-
-                    <button data-close-button class="close_button">&times;</button>
-                </div>
-
-                <div class="item_body" id="item_body">
-
-                </div>
-                <div class="item_form" id="item_form">
-
-                </div>
-
-            </div>
-
         </div>
-
-        {% include 'home/result_list.html' %}
-       
+                    
 
         <script defer src="{% static 'home/homescript.js' %}"></script>
        
