--- a/templates/home/result_list.html
+++ b/templates/home/result_list.html
@@ -16,7 +16,7 @@
     
   </ul>
   <div class="result-button">
-    <a href="{% url 'admin_home' %}"><button>Back</button></a>
+    <a href="{% url 'home' %}"><button>Back</button></a>
     </div>
 {% else %}
 
