--- a/static/admin/adminbase.css
+++ b/static/admin/adminbase.css
@@ -1,26 +1,33 @@
 #branding h1 a:link, #branding h1 a:visited {
-    color: white;
+    color: white; 
+}
+#site-purpose{
+    color: #7A1A22;
+    font-weight: bold;
 }
 
 body {
-    background-color: rgb(78, 34, 34);
+    background-color: #d4d4d4;
+    
+   
 }
 
 caption {
-    background-color: rgb(0, 255, 106)!important;
+    background-color: #7A1A22 !important;
   }
-
 tr:nth-child(even) {
-background-color: orange;
+background-color: #DAA2A7;
+
 }
 
 tr:nth-child(odd) {
-background-color: yellow;
+background-color: #EAE7E7;
 }
 
 #content-related {
     background-color: grey;
     color: #7A1A22;
+    
 }
 
 #header {
@@ -31,6 +38,7 @@ background-color: yellow;
 
 div.breadcrumbs {
     background-color: brown;
+    
 }
 
 #changelist .actions {
@@ -71,6 +79,8 @@ thead th {
 
 :root {
     --body-bg: greenyellow;
+    
+    
 }
 
 .submit-row {
