--- a/static/admin/adminbase.css
+++ b/static/admin/adminbase.css
@@ -55,6 +55,14 @@ background-color: #EAE7E7;
  background-color: white;
  color: #7A1A22;
 }
+.aligned label{
+background-color: red;
+color: black;
+}
+.required label, label.required {
+    font-weight: bold;
+    color: black(--body-fg);
+}
 #header {
     background-color:#7A1A22 ;
     height: 70px;
@@ -108,6 +116,7 @@ thead th {
 
 :root {
     --body-bg: greenyellow;
+    --selected-row: #EAE7E7;
     
 }
 
@@ -124,15 +133,17 @@ thead th {
 }
 
 .form-row {
-    background-color: orange;
+    background-color: #EAE7E7;
 }
 
 .selector .selector-available h2 {
-    background-color: maroon!important;
+    background-color: brown!important;
+    font-weight: 500;
 }
 
 .selector-chosen h2 {
-    background-color: pink!important;
+    background-color: brown!important;
+    font-weight: 500;
 }
 
 .form-row img, .form-row input {
@@ -144,11 +155,12 @@ thead th {
 }
 
 .selector-chooser li {
-    background-color: pink;
+    background-color: #DAA2A7;
 }
 
+
 input[type=text], input[type=password], input[type=email], input[type=url], input[type=number], input[type=tel], textarea, select, .vTextField {
-    background-color: black;
+    background-color: white;
 }
 
 .module h2, .module caption, .inline-group h2 {
