--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -8,6 +8,14 @@
 
 {% block branding %}
 <h1 id="site-name"><a href="{% url 'admin:index' %}">LSPU Admin</a></h1>
+<div class="logo left">
+  <img src="/static/home/adminhome/LSPU.png" alt="Left Logo">
+</div>
+<div class="logo right">
+  <img src="/static/home/adminhome/CSS.png" alt="Right Logo">
+</div> 
+
+
 {% endblock %}
 
 {% block content_title %}
