Update to features

--- a/static/members/memberstyle.css
+++ b/static/members/memberstyle.css
@@ -373,5 +373,24 @@ body {
   border-radius: 15px;
 }
 
+.user_borrowed_info {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  transition: 200ms ease-in-out;
+  border: 1px solid black;
+  border-radius: 10px;
+  z-index: 10;
+  background-color: white;
+  width: 1000px;
+  max-width: 80%;
+}
+
+.user_borrowed_info.active {
+  transform: translate(-50%, -50%) scale(1);
+}
+
+
 
 
