--- a/templates/members/members.html
+++ b/templates/members/members.html
@@ -42,6 +42,11 @@
                 <div id="user_info" class="user_info">
 
                 </div>
+
+                <div id="user_borrowed_info" class="user_borrowed_info">
+
+                </div>
+
             </div>
         </div>
     </body>
