--- a/templates/unreturned/unreturned.html
+++ b/templates/unreturned/unreturned.html
@@ -67,7 +67,7 @@
                 </div>
                 <div class="recent-lines">
                     <div id="btn_con">
-                        <button id="return_btn" class="rounded_corners" onclick="">Return</button>
+                        <button id="return_btn" class="rounded_corners" onclick="show_hide_pop_up()">Return</button>
                     </div>
                 </div>
             </div>
